# narrative_os

./: .coverage  .gitignore  .narrative_os.env  CHANGELOG.md  README.md  alembic.ini  create_test_data.py  promptTemplate.md  pyproject.toml  test_out.txt  test_results.txt  test_results2.txt  使用手册.md  验证结果报告.md
.narrative_db/: chroma.sqlite3
.narrative_state/: dev.pid  narrative_os.db  narrative_os.db-shm  narrative_os.db-wal
alembic/: README  env.py  script.py.mako
docs/: CODE_REVIEW.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
logs/: phase3_test_run2.txt
narrative_os/: __init__.py
scripts/: check_phase3.py  export_openapi.py  migrate_to_db.py
tests/: __init__.py  conftest.py  test_api_data_access.py  test_api_management.py  test_api_projects_crud.py  test_api_sessions.py  test_api_settings.py  test_benchmark_phase1.py  test_chapter_persistence.py  test_character_four_layers.py  test_cli_new_commands.py  test_consistency_semantic.py  test_cost_persistence.py  test_db_runtime_migrations.py  test_dev_server.py  test_e2e_flow.py  test_e2e_phase6.py  test_e2e_world_flow.py  test_evolution_canon.py  test_governance_plane.py  test_graph_interactive.py  test_interactive_hardening.py  test_interactive_sandbox.py  test_llm_router_sync.py  test_logging_rotation.py  test_lorebook.py  test_narrative_compiler.py  test_performance_benchmarks.py  test_phase2_storage_demotion.py  test_sl_system.py  test_story_plan_repository.py  test_trace_runs.py  test_trace_service_root_cause.py  test_trpg_enhanced.py  test_trpg_session_recovery.py  (+3 more)
update-log/: v2.0.0.md  (+2 more)
(+546 files in other folders)
